refactor: normalize catalog schema and variant flow